# cd-tomtom-arrow

./: .gitignore  CD_TomTom.exe.manifest  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  config.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/gui/: app_snapshot.rs  mod.rs  overlay_window.rs  renderer.rs  slint_app.rs  win32_helpers.rs
src/gui/slint/: control_panel.slint
src/gui/slint/common/: theme.slint  title_bar.slint  widgets.slint
src/gui/slint/tabs/markers/: tab_markers.slint
src/gui/slint/tabs/navigation/: tab_navigation.slint
src/gui/slint/tabs/navigation/panels/: data.slint  distance_text.slint  info.slint  overlay.slint  visibility.slint
src/gui/slint/tabs/routes/: tab_routes.slint
src/gui/slint/tabs/settings/: tab_settings.slint
src/hooks/: cave.rs  inject.rs  mod.rs
src/navigation/: math.rs  mod.rs  state.rs
src/process/: handle.rs  memory.rs  mod.rs
src/scanner/: mod.rs
